--- a/Pages/index.html
+++ b/Pages/index.html
@@ -92,7 +92,7 @@
 					_gMainApplication.setUp({
 						screenNames : arrDivNames
 					})
-					//_gMainApplication.nextScene();
+					_gMainApplication.nextScene();
 
 				}
 			}
