fixed The Issue (FTI):landing page added the html entities

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -199,8 +199,8 @@
 			<div class='home-question-text'>Why do smart women want to work at Accenture?</div>
 			<div class='button-text-container'>
 			<div class='landing-intro-text'>
-			<div class='landing-para'>At Accenture, we know that the success of our women around the globe is the key to our success as a company. That’s why we are committed to supporting their unique professional goals and aspirations and why we foster an innovative, collaborative, high-energy work environment.</div>
-			<div class='landing-para'>Do you know what we do for our women and for those in society? Take our quiz to learn how Accenture delivers on the benefits and rewards that women deserve. You will get 3 minutes to answer all questions; the faster you correctly answer these 10 multiple choice questions, the higher your chance of earning a ‘gold star’ and bragging rights! </div>
+			<div class='landing-para'>At Accenture, we know that the success of our women around the globe is the key to our success as a company. That&#39;s why we are committed to supporting their unique professional goals and aspirations and why we foster an innovative, collaborative, high-energy work environment.</div>
+			<div class='landing-para'>Do you know what we do for our women and for those in society? Take our quiz to learn how Accenture delivers on the benefits and rewards that women deserve. You will get 3 minutes to answer all questions; the faster you correctly answer these 10 multiple choice questions, the higher your chance of earning a &#39;gold star&#39; and bragging rights! </div>
 			</div>
 			<div  id="landing_btn_start" class='std-btn first-left-btn landing-start-btn' >Start Game</div>
 			</div>
@@ -214,8 +214,7 @@
 			<div class='landing-title'>Introduction</div>
 			<div class='button-text-container'>
 			<div class='landing-intro-text'>
-			<div class='landing-para'>At Accenture, we know that the success of our women around the globe is the key to our success as a company. That’s why we are committed to supporting their unique professional goals and aspirations and why we foster an innovative, collaborative, high-energy work environment.</div>
-			<div class='landing-para'>Do you know what we do for our women and for those in society? Take our quiz to learn how Accenture delivers on the benefits and rewards that women deserve. You will get 3 minutes to answer all questions; the faster you correctly answer these 10 multiple choice questions, the higher your chance of earning a ‘gold star’ and bragging rights! </div>
+			<div class='landing-para'> NO INTRO SCREEN !!</div>
 			</div>
 			<div  id="intro_btn_continue" class='std-btn first-left-btn landing-continue-btn' >Continue</div>
 			</div>
@@ -296,24 +295,12 @@
 			<div class='award-img award-img-container'></div>
 		</script>
 
-		<div style="display: block; margin-left: 30%; margin-top: 8%;" id="loadingScreen">
+		<div style="display: block; margin-left: 20%; margin-top: 8%;" id="loadingScreen">
 			<div id="loadingMessage" class="loader_wanted">
 				<div id="loader_anim" style="width: 100%;"></div>
 			</div>
 		</div>
-		<div id="landingPage" style="display: none; background-image: url(https://primary.careers-edit.accenture.com/in-en/team-culture/diversity/PublishingImages/quiz/landing/bg-girl.png);" class="home-page-bg">
-			<div class="home-question-text">Why do smart women want to work at Accenture?</div>
-			<div class="button-text-container">
-			<div class="landing-intro-text">
-			<div class="landing-para">At Accenture, we know that the success of our women around the globe is the key to our success as a company. That’s why we are committed to supporting their unique professional goals and aspirations and why we foster an innovative, collaborative, high-energy work environment.</div>
-			<div class="landing-para">Do you know what we do for our women and for those in society? Take our quiz to learn how Accenture delivers on the benefits and rewards that women deserve. You will get 3 minutes to answer all questions; the faster you correctly answer these 10 multiple choice questions, the higher your chance of earning a ‘gold star’ and bragging rights! </div>
-			</div>
-			<div id="landing_btn_start" class="std-btn first-left-btn landing-start-btn">Start Game</div>
-			</div>
-
-			<div id="img_landing_lady1" class="home-girl-img"></div>
-
-		</div>
+		<div id="landingPage" style="display: none;" class="home-page-bg"></div>
 		<div id="introductionPage" style="display: none;" class="page-bg"></div>
 		<div id="gamePage" style="display: none;" class="page-bg"></div>
 		<div id="endPage" style="display: none;" class="congrats-page-bg"></div>
