--- a/Pages/index.html
+++ b/Pages/index.html
@@ -172,21 +172,21 @@
 		</script>
 		
 		<script type="html/template" id="loading_screen_ui">
-			<div id="loadingMessage" class="loader_wanted">
-				<div id="loader_anim">
-					<div id="loader-1" class="quiz-number-loader">
+			<div id="loadingMessage" class="loader_wanted" style="height: 655px; width: 900px;">
+				<div id="loader_anim" style=" width:100%; margin-left: 20%; margin-top: 8%;">
+					<div id="loader-1" class="quiz-number-loader" style="display: inline-block;">
+						<div class="loader-inner-container" ></div>
+					</div>
+					<div id="loader-2" class="quiz-number-loader" style="display: inline-block;">
 						<div class="loader-inner-container"></div>
 					</div>
-					<div id="loader-2" class="quiz-number-loader">
+					<div id="loader-3" class="quiz-number-loader" style="display: inline-block;">
 						<div class="loader-inner-container"></div>
 					</div>
-					<div id="loader-3" class="quiz-number-loader">
+					<div id="loader-4" class="quiz-number-loader" style="display: inline-block;">
 						<div class="loader-inner-container"></div>
 					</div>
-					<div id="loader-4" class="quiz-number-loader">
-						<div class="loader-inner-container"></div>
-					</div>
-					<div id="loader-5" class="quiz-number-loader">
+					<div id="loader-5" class="quiz-number-loader" style="display: inline-block;">
 						<div class="loader-inner-container"></div>
 					</div>
 					
@@ -295,9 +295,9 @@
 			<div class='award-img award-img-container'></div>
 		</script>
 
-		<div style="display: block; margin-left: 20%; margin-top: 8%;" id="loadingScreen">
-			<div id="loadingMessage" class="loader_wanted">
-				<div id="loader_anim" style="width: 100%;"></div>
+		<div style="display: block; height: 655px;  width: 900px;"  id="loadingScreen">
+			<div id="loadingMessage" class="loader_wanted" >
+				<div id="loader_anim" style=" width:100%; height: 100%;"></div>
 			</div>
 		</div>
 		<div id="landingPage" style="display: none;" class="home-page-bg"></div>
