--- a/Pages/index.html
+++ b/Pages/index.html
@@ -173,7 +173,7 @@
 		
 		<script type="html/template" id="loading_screen_ui">
 			<div id="loadingMessage" class="loader_wanted" style="height: 655px; width: 900px;">
-				<div id="loader_anim" style=" width:100%; margin-left: 20%; margin-top: 8%;">
+				<div id="loader_anim" style=" width: 100%; padding-top: 30%; padding-left: 20%;">
 					<div id="loader-1" class="quiz-number-loader" style="display: inline-block;">
 						<div class="loader-inner-container" ></div>
 					</div>
@@ -295,9 +295,9 @@
 			<div class='award-img award-img-container'></div>
 		</script>
 
-		<div style="display: block; height: 655px;  width: 900px;"  id="loadingScreen">
+		<div style="display: block; height: 655px; width: 900px; background: #2A4385;  height: 655px;  width: 900px;  margin: auto;"  id="loadingScreen" >
 			<div id="loadingMessage" class="loader_wanted" >
-				<div id="loader_anim" style=" width:100%; height: 100%;"></div>
+				<div id="loader_anim" style=" width:100%; height: 100%;"> Initializing...</div>
 			</div>
 		</div>
 		<div id="landingPage" style="display: none;" class="home-page-bg"></div>
