--- a/Pages/index.html
+++ b/Pages/index.html
@@ -173,7 +173,7 @@
 		
 		<script type="html/template" id="loading_screen_ui">
 			<div id="loadingMessage" class="loader_wanted" style="height: 655px; width: 900px;">
-				<div id="loader_anim" style=" width: 100%; padding-top: 30%; padding-left: 20%;">
+				<div id="loader_anim" style=" width: 100%; padding-top: 30%; padding-left: 22%;">
 					<div id="loader-1" class="quiz-number-loader" style="display: inline-block;">
 						<div class="loader-inner-container" ></div>
 					</div>
@@ -297,7 +297,7 @@
 
 		<div style="display: block; height: 655px; width: 900px; background: #2A4385;  height: 655px;  width: 900px;  margin: auto;"  id="loadingScreen" >
 			<div id="loadingMessage" class="loader_wanted" >
-				<div id="loader_anim" style=" width:100%; height: 100%;"> Initializing...</div>
+				<div id="loader_anim" style=" width: 100%; position:absolute; top: 60%; left: 35%; font-size:30px;color:yellow;"> Initializing... </div>
 			</div>
 		</div>
 		<div id="landingPage" style="display: none;" class="home-page-bg"></div>
