removed viewport semicolon from the code

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -157,7 +157,7 @@
                 var viewPortTag = document.createElement('meta');
                 viewPortTag.id = "viewport";
                 viewPortTag.name = "viewport";
-                viewPortTag.content = "width=device-width;";
+                viewPortTag.content = "width=device-width";
                 document.getElementsByTagName('head')[0].appendChild(viewPortTag);
 
                 startLoadingAssets();
