--- a/Pages/mwqq.html
+++ b/Pages/mwqq.html
@@ -234,7 +234,7 @@
         </script>
 
         <script type="html/template" id="loading_screen_ui">
-            <div id="loadingMessage" class="loader_wanted" style="height: 100%; width: 100%;">
+            <div id="loadingMessage" class="loader_wanted" style="height: 100%; width: 100%;padding-top: 61%;">
             <div id="loader_anim" style=" width: 100%; padding-top: 30%; padding-left: 1em;">
             <div id="loader-1" class="quiz-number-loader" style="display: inline-block;">
             <div class="loader-inner-container" ></div>
@@ -355,9 +355,9 @@
             <div class='award-img award-img-container'></div>
         </script>
 
-        <div style="display: block; height: 100%; width: 100%; background: #2A4385; margin: auto;"  id="loadingScreen" >
-            <div id="loadingMessage" class="loader_wanted" >
-                <div id="loader_anim" style=" width: 100%; position:absolute; top: 60%; left: 35%; font-size:30px;color:yellow;">
+        <div style="display: block;    background: rgb(42, 67, 133);background-size: 100% 100%;    height: 100%;  width: 100%;  margin: auto;  overflow: hidden;  position: absolute;"  id="loadingScreen" >
+            <div id="loadingMessage" class="loader_wanted"  style="height: 100%; width: 100%;padding-top: 61%;">
+                <div id="loader_anim" style=" width: 100%;  font-size:30px;color:yellow;">
                     Initializing...
                 </div>
             </div>
