mobile changes for loading screen! and added client APIs for Social Networks

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -376,8 +376,8 @@
             }
         </script>
 
-      <script type="text/javascript" src="//platform.linkedin.com/in.js">
-            api_key:75u3r8o3r0fklq
+      <script type="text/javascript" src="//platform.linkedin.com/in.js?async=true">
+            api_key:75v0g9xaw9gxzc
             onLoad:onLinkedInLoad 
             authorize:true
         </script> 
