--- a/Pages/mwqq.html
+++ b/Pages/mwqq.html
@@ -9,7 +9,7 @@
         <title>JnS-App</title>
 
     </head>
-    <body>
+    <body style="margin: 0px;">
 
        
 
@@ -219,15 +219,11 @@
         </script>
 
         <!-- BEGIN TEMPLATES -->
-        <script type="html/template" id="loading_screen_ui_1">
-            <div id="loadingMessage">
-            <h1>Loading Assets..</h1>
-            </div>
-        </script>
+       
 
         <script type="html/template" id="loading_screen_ui">
-            <div id="loadingMessage" class="loader_wanted" style="height: 100%; width: 100%;padding-top: 61%;">
-            <div id="loader_anim" style=" width: 100%; padding-top: 30%; padding-left: 1em;">
+            <div id="loadingMessage" class="loader_wanted" style="height: 100%; width: 100%;padding-top: 16em;">
+            <div id="loader_anim" style=" width: 100%;">
             <div id="loader-1" class="quiz-number-loader" style="display: inline-block;">
             <div class="loader-inner-container" ></div>
             </div>
@@ -347,8 +343,8 @@
             <div class='award-img award-img-container'></div>
         </script>
 
-        <div style="display: block;    background: rgb(42, 67, 133);background-size: 100% 100%;    height: 100%;  width: 100%;  margin: auto;  overflow: hidden;  position: absolute;"  id="loadingScreen" >
-            <div id="loadingMessage" class="loader_wanted"  style="height: 100%; width: 100%;padding-top: 61%;">
+        <div style="display: block;    background: rgb(42, 67, 133);background-size: 100% 100%; text-align: center;   height: 100%;  width: 100%;  margin: auto;  overflow: hidden;  position: absolute;"  id="loadingScreen" >
+            <div id="loadingMessage" class="loader_wanted"  style="height: 100%; width: 100%;padding-top: 16em; ">
                 <div id="loader_anim" style=" width: 100%;  font-size:30px;color:yellow;">
                     Initializing...
                 </div>
@@ -365,11 +361,11 @@
             }
         </script>
 
-        <script type="text/javascript" src="//platform.linkedin.com/in.js">
-            api_key:75u3r8o3r0fklq 
+        <script type="text/javascript" src="//platform.linkedin.com/in.js?async=true">
+            api_key:75v0g9xaw9gxzc 
             onLoad:onLinkedInLoad 
             authorize:true
-        </script>
+        </script> 
 
     </body>
 </html>
