#1 click play again at the end, I go to the intro screen rather than the game itself  #2on the linkedin button gives the following error

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -341,7 +341,7 @@
             <div class='congrats-container'>
             <div class='congrats-text'>Congratulations!</div>
             <div class='landing-intro-text'>
-            <div class='landing-para end-screen-para'>You&#39;ve won the <%n_star%> star in <%n_second%> seconds. <a href="<%url_app%>"  target="_self"><span class="wqq-anchor-text">Play again</span></a> to get a better score.
+            <div class='landing-para end-screen-para'>You&#39;ve won the <%n_star%> star in <%n_second%> seconds. <a   target="_self"><span id="play-again-app" class="wqq-anchor-text">Play again</span></a> to get a better score.
             </div>
 
             <div class='landing-para end-screen-para'>Read more about the<a href="<%url_diversity%>"  target="_blank"> <span class="wqq-anchor-text"> Inclusion and Diversity journey at  Accenture.</span></a></div>
