--- a/Pages/mwqq.html
+++ b/Pages/mwqq.html
@@ -326,7 +326,7 @@
             <div class='congrats-container'>
             <div class='congrats-text'>Congratulations!</div>
             <div class='landing-intro-text'>
-            <div class='landing-para end-screen-para'>You&#39;ve won the <%n_star%> star in <%n_second%> seconds. <a href="<%url_app%>"  target="_self"><span class="wqq-anchor-text">Play again</span></a> to get a better score.
+            <div class='landing-para end-screen-para'>You&#39;ve won the <%n_star%> star in <%n_second%> seconds. <a   target="_self"><span id="play-again-app" class="wqq-anchor-text">Play again</span></a> to get a better score.
             </div>
 
             <div class='landing-para end-screen-para'>Read more about the<a href="<%url_diversity%>"  target="_blank"> <span class="wqq-anchor-text"> Inclusion and Diversity journey at  Accenture.</span></a></div>
@@ -342,6 +342,7 @@
             </div>
             <div class='award-img award-img-container'></div>
         </script>
+
 
         <div style="display: block;    background: rgb(42, 67, 133);background-size: 100% 100%; text-align: center;   height: 100%;  width: 100%;  margin: auto;  overflow: hidden;  position: absolute;"  id="loadingScreen" >
             <div id="loadingMessage" class="loader_wanted"  style="height: 100%; width: 100%;padding-top: 16em; ">
